--- a/index.html
+++ b/index.html
@@ -38,14 +38,18 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 col-12 ps-lg-5 px-md-0 px-3">
                     <div class="tag">Welcome To The Home Of Conk Inu</div>
                     <div class="img d-md-none"><img src="assets/images/hero.png" class="w-100"></div>
-                    <div class="heading">Fantom CUTEST</div>
-                    <div class="heading heading1">DOG AND CAT COINS</div>
+                    <!-- <div class="heading"></div> -->
+                    <div class="heading heading1">Fantom CUTEST DOG AND CAT COINS</div>
                     <div class="text">Conki Tax 3/5 - Utilised to provide $CONKI token holders with a share of protocol revenue, fund buybacks and burns as well as increase token LP</div>
                     <div class="d-md-none my-4">
                         <div class="button">
                             <a href="spooky.fi" class="btn btn-header">Buy $CONKI - Spooky Swap</a>
                         </div>
-                        <div class="ca">Ca: 0xF5226E59C2910A0eA904717a43D0d9394C257438</div>
+                        <div class="ca pt-2 pb-2">$CONKI ca: 0xF5226E59C2910A0eA904717a43D0d9394C257438</div>
+                        <div class="ca">$KITTI ca: 0x0Fd1A3c2b307b15c4c9727c42081eDB82DF06050</div>
+                        <div class="button mt-3">
+                            <a href="https://t.co/tIdfaGuXsG" class="btn btn-header">Mint NFT</a>
+                        </div>
                     </div>
                     <div class="join-us">
                         <div class="title">Join Us</div>
